<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.favorite.tvshow.FavTvShowFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_fav_tvshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/list_item"
        android:visibility="visible"/>

    <ProgressBar
        android:id="@+id/pb_fav_tvshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"
        android:indeterminateTint="@color/light_blue"/>

    <ImageView
        android:id="@+id/img_error_fav"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/error"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_error_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_fav_tvshow"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:visibility="gone"/>

</RelativeLayout>